examples/kju/positive/structs/struct_in_fuction_parameter.kju
fun write(a: Int): Unit import

fun f(a:A):Unit{
	write(a.x);
}

fun kju():Unit{
	var a:A=new(A);
	a.x=5;
	f(a);
}

struct A{
	x: Int;
}