examples/kju/negative/structs/same_field_name.kju
struct A
{
    a : Int;
    a : Int;
}
fun kju() : Unit
{
}